syntax = "proto3";
package SumEx;

option java_package = "SumEx";
option java_outer_classname = "SumEx_outer";

/*
Servizio deve offrire diversi metodi RPC:
    SimpleSum: dati due numeri interi, restituisce la loro somma  (provare sincrono e asincrono)

    RepeatedSum: dato un numero n e un numero t, il servizio restituisce uno stream di t numeri. Il primo valore dello stream
                    e n, il secondo `e n + n, il terzo n + n + n, . . . , fino ad arrivare a t valori.

    StreamSum: il client manda in stream coppie di numeri da sommare e il server risponde con la somma

*/

message Input{
    int32 n1 = 1;
    int32 n2 = 2;
}

message Output{
    int32 res = 1;
}

service Sum {
    rpc SimpleSum(Input) returns (Output){}

    rpc RepeatedSum (Input) returns (stream Output){}

    rpc StreamSum (stream Input) returns (stream Output){}
}

